# OpenDog

./: .gitignore  README.md  agent_loop.excalidraw  pyproject.toml
scripts/: install_opendog.sh
src/opendog/: __main__.py
src/opendog/cli/: commands.py  main.py  session_picker.py  startup.py  tui.py
src/opendog/core/: agent.py  agent_loader.py  conversation_runtime.py  event_bus.py  permissions.py  runtime_event.py  session_state.py  session_store.py  shared_context.py  skill_registry.py
src/opendog/core/cron/: __init__.py  definition.py  loader.py  runner.py  scheduler.py
src/opendog/interfaces/: __init__.py
src/opendog/interfaces/feishu/: __init__.py  adapter.py  client.py  gateway.py  state.py
src/opendog/provider/llm/: base.py
src/opendog/tools/: __init__.py  base.py  info.py  loader.py  registry.py
src/opendog/tools/builtin/: __init__.py  filesystem.py  shell.py  skills.py
src/opendog/tools/mcp/: __init__.py  client.py  loader.py  manager.py  tool.py
src/opendog/tools/plugins/: __init__.py  loader.py
src/opendog/utils/: config.py  def_loader.py
tests/: test_agent_guidance.py  test_agent_loader.py  test_agent_permission_messages.py  test_commands.py  test_conversation_runtime.py  test_cron.py  test_feishu_interface.py  test_permissions.py  test_tui_loop.py
workspace/: config.example.yaml
workspace/agents/Beagle/: AGENT.md  SOUL.md
workspace/agents/Designer/: AGENT.md  SOUL.md  skills.txt
workspace/plugins/: README.md
workspace/skills/cron-ops/: SKILL.md
workspace/skills/docx/: package-lock.json  package.json
