[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opendog"
version = "0.1.0"
description = "Terminal chat loop for rebuilding opendog helpers"
requires-python = ">=3.9"
dependencies = [
  "litellm>=1.56.0",
  "openai>=1.30.0",
  "pydantic>=2.8.0",
  "prompt-toolkit>=3.0.48",
  "pyyaml>=6.0.2",
  "rich>=13.9.0",
  "typer>=0.12.5",
  "lark-oapi>=1.4.0",
]

[project.scripts]
opendog = "opendog.cli.main:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
